add feature to play until 3 wins or 3 losses

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1 class="gameText" id="playerText">Player: </h1>
         <h1 class="gameText" id="computerText">Computer: </h1>
         <h1 class="gameText" id="resultText">Result: </h1>
+        <h1 class="finalText" id="finalText"></h1>
 
         <button class="choiceBtn"><i class="fa-solid fa-hand-back-fist"></i>ROCK</button>
         <button class="choiceBtn"><i class="fa-solid fa-hand"></i>PAPER</button>
